VULA-829 handle new CM setup